--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 @import "./variables.scss";
-body {
+
+*,
+*::after,
+*::before {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 // Navigation
@@ -31,6 +36,7 @@ body {
 
         &.active-link {
           color: $color-grey-1;
+          text-decoration: underline;
         }
       }
     }
