--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,3 @@
-$color-grey-1: #333;
-$color-grey-2: #888;
-$color-grey-3: #121212;
+$color-grey-1: #0000e6;
+$color-grey-2:  #0099ff;
+$color-grey-3: #0000e6;
