--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  font-family: sans-serif;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+button:active {
+  transform: translateY(-2px);
 }
