--- a/src/components/rockets/Rockets.css
+++ b/src/components/rockets/Rockets.css
@@ -38,3 +38,9 @@
   padding: 0 10px;
   display: inline-block;
 }
+
+@media only screen and (max-width: 768px) {
+  .rocket__info-image {
+    width: 40%;
+  }
+}
