--- a/src/components/rockets/RocketsItem.css
+++ b/src/components/rockets/RocketsItem.css
@@ -35,8 +35,8 @@
   background-color: #18a2b8;
   color: white;
   border-radius: 5px;
-  padding: 0 10px;
-  display: inline-block;
+  padding: 0 5px;
+  margin-right: 10px;
 }
 
 /* Mobile View */
